--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
         <section>
             <div class="content-box">
                 <select class="custom-select">
-                    <option selected>Open this select menu</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
                 </select>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
                     <div class="input-group-append">
                         <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
                     </div>
+                </div>
+                <div class="category-selects">
+                    <button>asd</button>
                 </div>
             </div>
             <div class="content-box">
