--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
         <section>
             <div class="content-box">
-                <select class="custom-select">
+                <select onchange="selectChange(this.options[this.selectedIndex].value)" class="custom-select">
                 </select>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
