Style and js fix

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <select onchange="selectChange(this.options[this.selectedIndex].value)" class="date-select">
                     </select>
                     <div class="search input-group mb-3">
-                        <input type="text" class="form-control search-input" placeholder="Podaj nazwę lub fragment rabortu" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <input type="text" class="form-control search-input" placeholder="Podaj nazwę lub fragment rabortu">
                         <div class="input-group-append search-btn" >
-                            <button class="btn btn-outline-secondary search" type="button">Wyszukaj</button>
+                            <button class="btn btn-outline-secondary search" onclick="search()" type="button">Wyszukaj</button>
                         </div>
                     </div>
                 </div>
